--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Theology, Doctrinal -- Early works to 1800'
 - !lcsh 'Reformed Church -- Doctrines -- Early works to 1800'
 - !lcc 'BX'
+- GITenberg
 title: Institutes of the Christian Religion (Vol. 1 of 2)
 url: http://www.gutenberg.org/ebooks/45001
